@@ -55,6 +55,9 @@ Trunk (not yet released)
     AVRO-1489. Java: Avro fails to build with OpenJDK 8. (Ricardo Arguello via
     tomwhite)
 
+    AVRO-1302. Python: Update documentation to open files as binary to
+    prevent EOL substitution. (Lars Francke via cutting)
+
 Avro 1.7.7 (23 July 2014)
 
   NEW FEATURES
